# text-vectorizer-api

./: README.md  pyproject.toml
models/RoBERTa-base-japanese-sentencepiece/: souseki_sentencepiece.model
samples/sentence_distance_checker/: README.md  pyproject.toml
samples/sentence_distance_checker/src/sentence_distance_checker/: __init__.py  main.py
src/text_vectroizer_api/: __init__.py  app.py
