[project]
name = "text-vectroizer-api"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Tadashi Takahashi", email = "ttakahashi@umn.co.jp" }
]
dependencies = [
    "protobuf>=5.28.2",
    "transformers>=4.45.1",
    "torch>=2.4.1",
    "fugashi>=1.3.2",
    "ipadic>=1.0.0",
    "unidic-lite>=1.0.8",
    "fastapi>=0.115.0",
    "uvicorn>=0.31.0",
]
readme = "README.md"
requires-python = ">= 3.12.6"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/text_vectroizer_api"]
